--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh;
-    background-color: rgb(5, 105, 255);
+    background-image: url("img/3. Background/Dark/1.png");
+    
 }
-
+h1{
+    color: white;
+}
+.opacity-container{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.616);
+}
 canvas{
     background-color: black;
 }
