--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     justify-content: center;
     background-image: url("img/3. Background/Dark/1.png");
     position: relative;
+    overflow: hidden;
     
 }
 h1{
@@ -105,6 +106,13 @@ canvas{
     transform: scale(1.05);
 }
 
+.cannot{
+    color: white;
+    font-size: 2rem;
+    display: none;
+    text-align: center;
+}
+
 @media(max-width: 800px){
     .attack-buttons-container, .movement-buttons-container{
         flex-direction: column;
@@ -121,5 +129,14 @@ canvas{
     #start-button{
         top: 99%;
         width: 250px;
+    }
+}
+
+@media(max-height:800px){
+    .explication{
+        display: none;
+    }
+    h2{
+        display: none;
     }
 }
